--- a/src/ui/shared/components/Popup.css
+++ b/src/ui/shared/components/Popup.css
@@ -1,5 +1,4 @@
 .Popup {
-  position: -webkit-absolute;
   position: absolute;
   right: 100%;
   background: #152437;
